fixed image container so that it doesnt touch sides on smaller screens

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -35,6 +35,7 @@ h1 {
 }
 
 .slide-container {
+    width: 90%;
     max-width: 900px;
     margin: 2em auto;
     position: relative;
